# VKBot-ChetlasCouncil

./: .gitignore  pyproject.toml
src/: main.py
src/services/: __init__.py  commands.py  poll.py  schemas.py  vk.py
src/utils/: config.py  message.py
